[package]
name = "packagemerge"
version = "0.1.0"
authors = ["Sebastian Gesemann <s.gesemann@gmail.com>"]
description = "Implementation of the package-merge algorithm for data compression. It solves a problem similar to problem Huffman's algorithm solves: Computing a prefix-free code. But the package-merge algorithm does it while satisfying an additional constraint: a maximum code word length."
keywords = ["data", "compression", "data-compression", "Huffman", "package-merge", "packagemerge", "package", "merge"]
license = "MIT/Apache-2.0"
readme = "README.md"
homepage = "https://github.com/sellibitze/packagemerge-rs"
repository = "https://github.com/sellibitze/packagemerge-rs.git"

[dependencies]
itertools = "0.4"
